--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -1,54 +1,145 @@
-#########################
-## Sample Sass Lint File
-#########################
-# Linter Options
+files:
+  include: 'styles/**/*.scss'
+    # Set the formatter to 'html'
+  formatter: html
+  # Output file instead of logging results
+  output-file: 'linters/sass-lint.html'
+  ignore:
+    - 'styles/1-plugins/**.scss'
 options:
-  # Don't merge default rules
+  formatter: stylish
   merge-default-rules: false
   # Set the formatter to 'html'
-  formatter: html
+  # formatter: html
   # Output file instead of logging results
   output-file: 'linters/sass-lint.html'
   # Raise an error if more than 50 warnings are generated
   max-warnings: 50
-# File Options
-files:
-  include: 'styles/**/*.scss'
-
-# Rule Configuration
 rules:
-  extends-before-mixins: 2
-  extends-before-declarations: 2
-  placeholder-in-extend: 2
-  mixins-before-declarations:
-    - 2
-    -
-      exclude:
-        - breakpoint
-        - mq
-
-  no-warn: 1
-  no-debug: 1
-  no-ids: 2
-  no-important: 2
+  bem-depth:
+    - 1
+    - max-depth: 1
+  border-zero:
+    - 1
+    - convention: none
+  brace-style:
+    - 1
+    - allow-single-line: true
+  class-name-format:
+    - 0
+    - convention: hyphenatedbem
+  clean-import-paths:
+    - 1
+    - filename-extension: false
+      leading-underscore: false
+  empty-line-between-blocks:
+    - 1
+    - ignore-single-line-rulesets: true
+  extends-before-declarations: 1
+  extends-before-mixins: 1
+  final-newline:
+    - 0
+    - include: true
+  force-attribute-nesting: 1
+  force-element-nesting: 0
+  force-pseudo-nesting: 0
+  function-name-format:
+    - 1
+    - allow-leading-underscore: true
+      convention: hyphenatedlowercase
+  hex-length:
+    - 1
+    - style: long
   hex-notation:
-    - 2
-    -
-      style: uppercase
+    - 1
+    - style: lowercase
+  id-name-format:
+    - 0
+    - convention: hyphenatedbem
   indentation:
-    - 2
-    -
-      size: 2
+    - 1
+    - size: 4
+  leading-zero:
+    - 0
+    - include: false
+  mixin-name-format:
+    - 1
+    - allow-leading-underscore: true
+      convention: >-
+        ^([\.\%]?[a-z]*[-]?[a-z0-9\-]*)(\.[a-z0-9\-]*)?(__[a-z0-9]*[-]?[a-z0-9\-]*)?(--[a-z0-9]*[-]?[a-z0-9\-]*)?(\:[a-z]*)*$
+      convention-explanation: BEM pattern
+  mixins-before-declarations: 0
+  nesting-depth:
+    - 1
+    - max-depth: 3
+  no-color-keywords: 1
+  no-color-literals: 0
+  no-css-comments: 1
+  no-debug: 1
+  no-duplicate-properties: 1
+  no-empty-rulesets: 1
+  no-extends: 0
+  no-ids: 1
+  no-important: 0
+  no-invalid-hex: 1
+  no-mergeable-selectors: 1
+  no-misspelled-properties:
+    - 1
+    - extra-properties: []
+  no-qualifying-elements:
+    - 0
+    - allow-element-with-attribute: false
+      allow-element-with-class: false
+      allow-element-with-id: false
+  no-trailing-zero: 1
+  no-url-protocols: 1
+  no-vendor-prefixes:
+    - 0
+    - additional-identifiers: []
+      excluded-identifiers: []
+  placeholder-in-extend: 1
+  placeholder-name-format:
+    - 1
+    - convention: hyphenatedbem
   property-sort-order:
     - 1
-    -
-      order:
-        - display
-        - margin
-      ignore-custom-properties: true
+    - ignore-custom-properties: false
+      order: smacss
+  quotes:
+    - 1
+    - style: single
+  shorthand-values:
+    - 1
+    - allowed-shorthands:
+        - 1
+        - 2
+        - 3
+        - 4
+  single-line-per-selector: 1
+  space-after-bang:
+    - 1
+    - include: false
+  space-after-colon:
+    - 1
+    - include: true
+  space-after-comma: 0
+  space-before-bang:
+    - 1
+    - include: true
+  space-before-brace:
+    - 1
+    - include: true
+  space-before-colon: 1
+  space-between-parens:
+    - 1
+    - include: false
+  trailing-semicolon: 1
+  url-quotes: 1
   variable-for-property:
-    - 2
-    -
-      properties:
-        - margin
-        - content
+    - 0
+    - properties: []
+  variable-name-format:
+    - 1
+    - allow-leading-underscore: true
+      convention: hyphenatedlowercase
+  zero-unit: 0
